trunk/Source/imgproc/imgproc-operations.ads


   -- Fills the connected component until the color difference gets large enough
   procedure Cv_Flood_Fill (Image     : Cv_Arr_P;
                            Seedpoint : Cv_Point;
                            Newvalue  : Cv_Scalar;
                            Lodiff    : Cv_Scalar := Cv_Scalar_All (0.0);
                            Updiff    : Cv_Scalar := Cv_Scalar_All (0.0);
                            Comp      : Cv_Connected_Comp_P := null;
                            Flags     : Integer := 4;
                            Mask      : Cv_Arr_P := null);

   -----------------------------------------------------------------------------
   -- Feature detection
   -----------------------------------------------------------------------------
   -- Runs canny edge detector
   procedure Cv_Canny ( Image        : Cv_Arr_P;
                       Edges         : Cv_Arr_P;
                       Threshold1    : Long_Float;
                       Threshold2    : Long_Float;
                       Aperture_Size : Integer := 3);

   -- Calculates constraint image for corner detection
   -- Dx^2 * Dyy + Dxx * Dy^2 - 2 * Dx * Dy * Dxy.
   -- Applying threshold to the result gives coordinates of corners
   procedure Cv_Pre_Corner_Detect ( Image       : Cv_Arr_P;
                                   Corners      : Cv_Arr_P;
                                   Aperturesize : Integer := 3);

   -- Calculates eigenvalues and eigenvectors of image blocks for corner detection.
   procedure Cv_Corner_Eigen_Vals_And_Vecs (Image         : Cv_Arr_P;
                                            Eigenvv       : Cv_Arr_P;
                                            Blocksize     : Integer;
                                            Aperture_Size : Integer := 3);

   -- Calculates the minimal eigenvalue of gradient matrices for corner detection.
   procedure Cv_Corner_Min_Eigen_Val (Image         : Cv_Arr_P;
                                      Eigenval      : Cv_Arr_P;
                                      Blocksize     : Integer;
                                      Aperture_Size : Integer := 3);

   --Harris edge detector.
   procedure Cv_Corner_Harris (Image         : Cv_Arr_P;
                               Harris_Dst    : Cv_Arr_P;
                               Blocksize     : Integer;
                               Aperture_Size : Integer := 3;
                               K             : Long_Float := 0.04);

   --Refines the corner locations.
   procedure Cv_Find_Corner_Sub_Pix (Image    : Cv_Arr_P;
                                     Corners  : Cv_Point_2d_32f; -- fixa
                                     Count    : Integer;
                                     Win      : Cv_Size;
                                     Zerozone : Cv_Size;
                                     Criteria : Cv_Term_Criteria);

   -- Determines strong corners on an image.
   procedure Cv_Good_Features_To_Track (Image        : Cv_Arr_P;
                                        Eigimage     : Cv_Arr_P;
                                        Tempimage    : Cv_Arr_P;
                                        Corners      : Cv_Point_2d_32f_Array;
                                        Cornercount  : access Integer;
                                        Qualitylevel : Long_Float;
                                        Mindistance  : Long_Float;
                                        Mask         : Cv_Arr_P := null;
                                        Blocksize    : Integer := 3;
                                        Useharris    : Integer := 0;
                                        K            : Long_Float := 0.04);

   --Finds lines in a binary image using a Hough transform.
   function Cv_Hough_Lines2 (Image     : Cv_Arr_P;
                             Storage   : Cv_Void_P;
                             Method    : Integer;
                             Rho       : Long_Float;
                             Theta     : Long_Float;
                             Threshold : Integer;
                             Param1    : Long_Float := 0.0;
                             Param2    : Long_Float := 0.0) return Cv_Seq_P;

   -- Finds circles in the image
   function Cv_Hough_Circles (Image          : Cv_Arr_P;
                              Circle_Storage : Cv_Void_P;
                              Method         : Integer;
                              Dp             : Long_Float;
                              Min_Dist       : Long_Float;
                              Param1         : Long_Float := 100.0;
                              Param2         : Long_Float := 100.0;
                              Min_Radis      : Integer := 0;
                              Max_Radius     : Integer := 0)
                              return Cv_Seq_P;

   -- Fits a line to a 2D or 3D point set.
   procedure Cv_Fit_Line (Points   : Cv_Arr_P;
                          Disttype : Integer;
                          Param    : Long_Float;
                          Reps     : Long_Float;
                          Aepes    : Long_Float;
                          Line     : Cv_32f_Array);

   -- Constructs kd-tree from set of feature descriptors
   function Cv_Create_Kd_Tree (Desc : Cv_Mat_P)
                               return Cv_Feature_Tree_P;

   -- Constructs spill-tree from set of feature descriptors
   function Cv_Create_Spill_Tree (Raw_Data : Cv_Mat_P;
                                  Naive    : Integer := 50;
                                  Rho      : Long_Float := 0.7;
                                  Tau      : Long_Float := 0.1)
                                  return Cv_Feature_Tree_P;

   -- Release feature tree
   procedure Cv_Release_Feature_Tree (Tr : Cv_Feature_Tree_P);

   -- Searches feature tree for k nearest neighbors of given reference points,
   -- searching (in case of kd-tree/bbf) at most emax leaves.
   procedure Cv_Find_Features (Tr           : Cv_Feature_Tree_P;
                               Query_Points : Cv_Mat_P;
                               Indices      : Cv_Mat_P;
                               Dist         : Cv_Mat_P;
                               K            : Integer;
                               Emax         : Integer := 20);

   -- Search feature tree for all points that are inlier to given rect region.
   -- Only implemented for kd trees
   function Cv_Find_Features_Boxed (Tr          : Cv_Feature_Tree_P;
                                    Bounds_Min  : Cv_Mat_P;
                                    Bounds_Max  : Cv_Mat_P;
                                    Out_Indices : Cv_Mat_P)
                                    return Integer;

   -- Construct a Locality Sensitive Hash (LSH) table, for indexing d-dimensional vectors of
   -- given type. Vectors will be hashed L times with k-dimensional p-stable (p=2) functions.

   function Cv_Create_Lsh (Ops     : Cv_Lsh_Operations_P;
                           D       : Integer;
                           L       : Integer := 10;
                           K       : Integer := 10;
                           Table_T : Unsigned_32 := Cv_Maketype (Cv_64f, 1);
                           R       : Long_Float := 4.0;
                           Seed    : Interfaces.Integer_64 := -1)
                           return Cv_Lsh_P;

   -- Construct in-memory LSH table, with n bins.

   function Cv_Create_Memory_Lsh (D       : Integer;
                                  N       : Integer;
                                  L       : Integer := 10;
                                  K       : Integer := 10;
                                  Table_T : Unsigned_32 := Cv_Maketype (Cv_64f, 1);
                                  R       : Long_Float := 4.0;
                                  Seed    : Integer_64 := -1)
                                  return Cv_Lsh_P;

   -- Free the given LSH structure.
   procedure Cv_Release_Lsh (Lsh : access Cv_Lsh_P);

   -- Return the number of vectors in the LSH.
   function Lsh_Size (Lsh : Cv_Lsh_P)
                      return Integer;

   -- Add vectors to the LSH structure, optionally returning indices.
   procedure Cv_Lsh_Add (Lsh     : Cv_Lsh_P;
                         Data    : Cv_Mat_P;
                         Indices : Cv_Mat_P := null);

   -- Remove vectors from LSH, as addressed by given indices.
   procedure Cv_Lsh_Remove (Lsh     : Cv_Lsh_P;
                            Indices : Cv_Mat_P);

   -- Query the LSH n times for at most k nearest points; data is n x d,
   -- indices and dist are n x k. At most emax stored points will be accessed.
   procedure Cv_Lsh_Query (Lsh          : Cv_Lsh_P;
                           Query_Points : Cv_Mat_P;
                           Indices      : Cv_Mat_P;
                           Dist         : Cv_Mat_P;
                           K            : Integer;
                           Emax         : Integer);
private

   pragma Import (C, Cv_Acc, "cvAcc");
   pragma Import (C, Cv_Square_Acc, "cvSquareAcc");
   pragma Import (C, Cv_Multiply_Acc, "cvMultiplyAcc");
   pragma Import (C, Cv_Running_Avg, "cvRunningAvg");

   pragma Import (C, Cv_Copy_Make_Border, "cvCopyMakeBorder");
   pragma Import (C, Cv_Smooth, "cvSmooth");
   pragma Import (C, Cv_Filter_2d, "cvFilter2D");
   pragma Import (C, Cv_Integral, "cvIntegral");
   pragma Import (C, Cv_Pyr_Down, "cvPyrDown");
   pragma Import (C, Cv_Pyr_Up, "cvPyrUp");
   pragma Import (C, Cv_Create_Pyramid, "cvCreatePyramid");
   pragma Import (C, Cv_Release_Pyramid, "cvReleasePyramid");
   pragma Import (C, Cv_Pyr_Mean_Shift_Filtering, "cvPyrMeanShiftFiltering");
   pragma Import (C, Cv_Pyr_Segmentation, "cvPyrSegmentation");
   pragma Import (C, Cv_Watershed, "cvWatershed");
   pragma Import (C, Cv_Inpaint, "cvInpaint");
   pragma Import (C, Cv_Sobel, "cvSobel");
   pragma Import (C, Cv_Laplace, "cvLaplace");
   pragma Import (C, Cv_Cvt_Color, "cvCvtColor");
   pragma Import (C, Cv_Resize, "cvResize");
   pragma Import (C, Cv_Warp_Affine, "cvWarpAffine");
   pragma Import (C, Cv_Get_Affine_Transform, "cvGetAffineTransform");
   pragma Import (C, Cv_2d_Rotation_Matrix, "cv2DRotationMatrix" );
   pragma Import (C, Cv_Warp_Perspective, "cvWarpPerspective");
   pragma Import (C, Cv_Get_Perspective_Transform, "cvGetPerspectiveTransform");
   pragma Import (C, Cv_Remap, "cvRemap");
   pragma Import (C, Cv_Convert_Maps, "cvConvertMaps");
   pragma Import (C, Cv_Log_Polar, "cvLogPolar");
   pragma Import (C, Cv_Linear_Polar, "cvLinearPolar");
   pragma Import (C, Cv_Undistort2, "cvUndistort2");
   pragma Import (C, Cv_Init_Undistort_Map, "cvInitUndistortMap");
   pragma Import (C, Cv_Init_Undistort_Rectify_Map, "cvInitUndistortRectifyMap");
   pragma Import (C, Cv_Undistort_Points, "cvUndistortPoints");
   pragma Import (C, Cv_Create_Structuring_Element_Ex, "cvCreateStructuringElementEx");
   pragma Import (C, Cv_Release_Structuring_Element, "cvReleaseStructuringElement");
   pragma Import (C, Cv_Erode, "cvErode");
   pragma Import (C, Cv_Dilate, "cvDilate");
   pragma Import (C, Cv_Morphology_Ex, "cvMorphologyEx");
   pragma Import (C, Cv_Moments, "cvMoments");
   pragma Import (C, Cv_Get_Spatial_Moment, "cvGetSpatialMoment");
   pragma Import (C, Cv_Get_Central_Moment, "cvGetCentralMoment");
   pragma Import (C, Cv_Get_Normalized_Central_Moment, "cvGetNormalizedCentralMoment");
   pragma Import (C, Cv_Get_Hu_Moments, "cvGetHuMoments");

   pragma Import (C, Cv_Get_Rect_Sub_Pix, "cvGetRectSubPix");
   pragma Import (C, Cv_Sample_Line, "cvSampleLine");
   pragma Import (C, Cv_Get_Quadrangle_Sub_Pix, "cvGetQuadrangleSubPix");
   pragma Import (C, Cv_Match_Template, "cvMatchTemplate");
   pragma Import (C, Cv_Calc_Emd2, "cvCalcEMD2");
